# sleap-mot

./: .gitignore  README.md  codecov.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
sleap_mot/: __init__.py  eval.py  feature_tracker.py  global_track.py  track_instance.py  tracker.py  utils.py
sleap_mot/candidates/: __init__.py  fixed_window.py  local_queues.py
tests/: conftest.py  test_tracker.py  test_version.py
tests/candidates/: test_fixed_window.py  test_local_queues.py
tests/data/clips/cohort2.220516_093004.Camera0.mov.00000.t0=20068.t1=20165/: feature_tracked.slp  metadata.json  proofread.slp  sleap_tracked.slp
tests/data/slp/: centered_pair_predictions.clean.slp
